# Ordnung

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  HANDOFF.md  KEY_CHECK.md  Makefile  PLAN.md  README.md  UI_UX_OVERHAUL.md
.claude/: settings.json
.claude/skills/audio-analysis/: SKILL.md
.claude/skills/ordnung-architecture/: SKILL.md
.claude/skills/ordnung-roadmap/: SKILL.md
.claude/skills/rekordbox-format/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: pages.yml  release.yml
crates/ordnung-cli/: Cargo.toml
crates/ordnung-cli/src/: commands.rs  main.rs
crates/ordnung-core/: Cargo.toml
crates/ordnung-core/src/: catalog.rs  convert.rs  discogs.rs  error.rs  lib.rs  scan.rs  tag.rs  update.rs  usb.rs
crates/ordnung-core/src/analysis/: decode.rs  downbeat.rs  dsp.rs  fingerprint.rs  key.rs  mod.rs  quality.rs  tempo.rs  waveform.rs
crates/ordnung-core/src/model/: key.rs  mod.rs
crates/ordnung-core/tests/: bpm_eval.rs  chroma_debug.rs  decode_samples.rs  energy_probe.rs  key_eval.rs  wf_fulltrack_check.rs
crates/ordnung-gui/: Cargo.toml
crates/ordnung-gui/src/: app.rs  audio.rs  config.rs  covers.rs  inspector.rs  jobs.rs  macos_drag.rs  macos_pasteboard.rs  main.rs  modals.rs  player.rs  sidebar.rs  table.rs  tex.rs  util.rs  views.rs
crates/ordnung-gui/src/ui/: hover.rs  mod.rs  theme.rs  tokens.rs
crates/ordnung-rbdb/: Cargo.toml
crates/ordnung-rbdb/src/: anlz.rs  lib.rs  pdb.rs
crates/ordnung-rbdb/tests/: pdb_read.rs
docs/: index.html
docs/design/: discogs-track-inspector.md  soulseek-acquisition.md
site/: index.html
tools/: build-app.sh
