[package]
name = "ordnung-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Ordnung command-line interface."

[[bin]]
name = "ordnung"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
indicatif = "0.18.4"
ordnung-core = { path = "../ordnung-core" }
ordnung-rbdb = { path = "../ordnung-rbdb" }
rayon = "1.12.0"
# Phase 1: clap, indicatif, anyhow.
