[package]
name = "ordnung-rbdb"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "rekordbox/CDJ export: export.pdb (DeviceSQL) + ANLZ writers."

[dependencies]
ordnung-core = { path = "../ordnung-core" }
thiserror = "2.0.18"
# Phase 5 (write side): rekordcrate (binrw read/write of DeviceSQL). See the
# rekordbox-format skill. The read side is a self-contained parser in `pdb`.
